2008-03-22  Brian Pepple  <bpepple@fedoraproject.org>
	
	* data/glade/account_dialog.glade:
	* data/glade/add_friend_dialog.glade:
	* data/glade/preferences_dialog.glade:
	* data/glade/send_message_dialog.glade:
	* data/glade/spell_dialog.glade: moved to glade directory,
	since we won't be including these in the tarball.

	* data/account_dlg.xml:
	* data/add_friend_dlg.xml:
	* data/spell_dlg.xml:
	* data/prefs-dlg.xml:
	* data/send_message_dlg.xml: New files.

	* data/Makefile.am:
	* po/POTFILES.in:
	* src/twitux-add-dialog.c:
	* src/twitux-account-dialog.c:
	* src/twitux-preferences.c:
	* src/twitux-send-message-dialog.c:
	* src/twitux-spell-dialog.c: start porting to gktbuilder
	from libglade.

2008-03-13  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in: have gettext translations match tarball name.

2007-03-10  Daniel Morales  <daniminas@gmail.com>

        * Release 0.61.

2008-03-03  Daniel Morales <daniminas@gmail.com>

	* src/twitux-tweet-list.c: Better text wrapping on tweets column.

2008-02-19  Daniel Morales <daniminas@gmail.com>

	* src/twitux-main.c: Bugfix #1897030. Thread system not initialized!

2008-02-14  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in:
	* src/twitux-main.c: Drop libgnomeui requirement for now, since we aren't
	really using any of the gnome libraries.

2008-02-14  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.c:
	* src/twitux-network.c: Use g_get_home_dir, instead of gnome_util_home_file.

2008-02-15  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-send-message-dialog.c:
	* src/twitux-send-message-dialog.h:
	* src/twitux-tweet-list.c: Add a shortcut to reply tweets from timelines
	(double click). That closes #1886311

2008-02-14  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-parser.c: Why-O-why must Ubuntu never forward patches upstream?
	Anyway here's a patch I grabbed from Ubuntu to handle utf8 responses.

2008-02-13  Brian Pepple  <bpepple@fedoraproject.org>
