@@ -126,6 +126,7 @@ message_setup (GtkWindow  *parent)
 	GtkCellRenderer       *renderer;
 	GtkListStore          *model_followers;
 	gchar                 *path;
+	guint                  result;
 	GError                *err = NULL;
 	
 	priv = GET_PRIV (dialog);
@@ -137,8 +138,14 @@ message_setup (GtkWindow  *parent)
 	ui = gtk_builder_new ();
 	gtk_builder_set_translation_domain (ui, GETTEXT_PACKAGE);
 	path = twitux_paths_get_glade_path (XML_FILE);
-	gtk_builder_add_from_file (ui, path, &err);
+	result = gtk_builder_add_from_file (ui, path, &err);
 	g_free (path);
+
+	if (result == 0) {
+		g_warning ("Unable to get xml file: %s", err->message);
+		g_error_free (err);
+		return;
+	}
 
 	/* Grab the widgets */
 	priv->dialog = GTK_WIDGET (gtk_builder_get_object (ui, "send_message_dialog"));
