@@ -231,6 +231,7 @@ twitux_spell_dialog_show (GtkWidget   *textview,
 	GtkBuilder        *ui;
 	gchar             *str;
 	gchar             *path;
+	guint              result;
 	GError            *err = NULL;
 
 	g_return_if_fail (textview != NULL);
@@ -249,8 +250,14 @@ twitux_spell_dialog_show (GtkWidget   *textview,
 	ui = gtk_builder_new ();
 	gtk_builder_set_translation_domain (ui, GETTEXT_PACKAGE);
 	path = twitux_paths_get_glade_path (XML_FILE);
-	gtk_builder_add_from_file (ui, path, &err);
+	result = gtk_builder_add_from_file (ui, path, &err);
 	g_free (path);
+
+	if (result == 0) {
+		g_warning ("Unable to get xml file: %s", err->message);
+		g_error_free (err);
+		return;
+	}
 
 	/* Grab the widgets */
 	dialog->window = GTK_WIDGET (gtk_builder_get_object (ui, "spell_dialog"));
